# math-modeling

./: README.md
Discrete Two-Dimensional Random Variable/: CMakeLists.txt  main.f90
Discrete Two-Dimensional Random Variable/libs/libcdf90/modules/: cdf_chisq_mod.mod  cdf_normal_mod.mod
Discrete Two-Dimensional Random Variable/modules/: random.f90
Queueing System Simulation/: CMakeLists.txt  example1.f90  example2.f90  example3.f90  example4.f90  example5.f90
Queueing System Simulation/example1_output/: customer_records.csv  event_records.csv
Queueing System Simulation/example2_output/: customer_records.csv  event_records.csv
Queueing System Simulation/example3_output/: customer_records.csv  event_records.csv
Queueing System Simulation/example4_output/: customer_records.csv  event_records.csv
Queueing System Simulation/example5_output/: customer_records.csv  event_records.csv
Queueing System Simulation/modules/: ogpf.f90
Queueing System Simulation/modules/queueing_system/: customer.f90  customer_queue.f90  event.f90  event_queue.f90  random.f90  record.f90  server.f90  simulation.f90
